# ------------------------------------------------------------------------------
#  ChangeLog
#  This file is part of Unifix BWidget Toolkit
#  $Id: ChangeLog,v 1.213 2009/09/10 19:23:35 oberdorfer Exp $
# ------------------------------------------------------------------------------

2009-09-10 Johann Oberdorfer  <oberdorfer@users.sourceforge.net>

        * combobox hottrack motion bug fixed:
          "after idle" should fix the problem with very long listbox text items
          which caused under certain circumstances a complete crash (CDE freeze)
          this happened under AIX5.3 and CDE, running under tcl/Tk 8.4.7,

2009-09-05 Johann Oberdorfer  <oberdorfer@users.sourceforge.net>

	*** BWidget revitalization to make usage of ttk ***
        * pkgIndex.tcl,   updated to 1.9.1, themeutils.tcl added, requ.
	                  initialization sequence
	* themeutils.tcl, theme support file added
	* widget.tcl,     various changes related to ttk added
	* init,tcl,       BWidget::set_themedefaults "initialize" added
	* --
	  arrow.tcl, button.tcl, buttonbox.tcl, color.tcl, dialog.tcl,
	  entry.tcl, font.tcl, label.tcl, labelframe.tcl, 
	  listbox.tcl, mainframe.tcl, messagedlg.tcl, pagesmgr.tcl,
	  panedw.tcl, panelframe.tcl, passwddlg.tcl, progressbar.tcl,
	  scrollframe.tcl, scrollview.tcl, scrollw.tcl, separator.tcl,
	  spinbox.tcl, statusbar.tcl, titleframe.tcl, combobox.tcl,
	  notebook.tcl
  	  -- theme related mod's done
	* utils.tcl, BWidget::bindMiddleMouseMovement added,
	* tree.tcl,  BWidget::bindMiddleMouseMovement added),
		    
          -- open issues:
	       Tk*Font as default font (like in dynhelp.tcl),
	       tree.tcl _themechanged proc' not perfect for existing
	       tree item colorization (expanding a branch after changing
	       the style still shows the previous fill color !)

          -- note: --
	  **** package ready for testing ***

2009-09-03 Harald Oehlmann  <oehhar@users.sourceforge.net>
